--- a/selfintroduction/src/main/resources/templates/index.html
+++ b/selfintroduction/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
 		<div class="center-links">
 			<a th:href="@{/save}" class="btn">新規登録</a>
 			<a th:href="@{/list}" class="btn">一覧表示</a>
+			<a th:href="@{/game/top}" class="btn">🎮 ゲームで遊ぶ</a>
 		</div>
 	</div>
 </body>
